# fivetran_custom_connector

./: .gitignore  000 - Scratch.ipynb  001 - DuckDB.ipynb  002 - env to config.ipynb  README.md  connector.py  deploy.sh  gen_config.py  pyproject.toml  requirements.txt
